--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
         </header>
         <div id="slider">
           <ul id="slides">
-              <li class="sliderli visable">1</li>
+              <li class="sliderli">1</li>
               <li class="sliderli">2</li>
               <li class="sliderli">3</li>
               <li class="sliderli">4</li>
               <li class="sliderli">5</li>
           </ul>
+          <ul id="slide-dots">
 
-            <div id="slidercontrolscontainer">
-                <ul><li class="sliderbutton"><button class="slidecontrol" id="next"></button></li><li class="sliderbutton"><button class="slidecontrol" id="pre"></button></li></ul>
-            </div>
+          </ul>
         </div>
         <div id="topbar">
             <h1>Welcome</h1>
@@ -58,7 +57,7 @@
             </div>
             <div id="righttoptile">
                 <h2>Riptides</h2>
-                <p>Team</p>
+                <p id="teamp">Team</p>
                 <img src="assets/img/riptideslogo.png" alt="riptides logo"/>
                 <p id="righttoptiletext">Do you want to be a part of a team and learn how to play the games you love on a higher level? Go to our website and become a member of a team, and be trained by one of our expirenced trainers.</p>
                 <button id="riptidesbutton">Go to Riptides</button>
@@ -74,6 +73,29 @@
           <div class="thirtythree"><p>Regular exercise will improve your memory and help your thinking skills. This will make you a more efficient learner and bring you one step ahead of your competitors.</p>
             <img src="assets/img/siloutte3.png" alt="siloutte"/></div>
         </div>
+        <div id="specs">
+          <div id="specsleft">
+             <img src="assets/Img/pc.png" alt="picture of computer"/>
+             <h2>Specs</h2>
+             <ul id="specsleftul">
+               <li>Graphics card: ASUS GTX 1060 O6G GAMING</li>
+               <li>CPU: Intel Core i5-7500 3.40 GHz</li>
+               <li>RAM: Crucial Ballistix Sport 2x8GB 2400 Mhz</li>
+               <li>System disk: Kingston UV400 240GB SSD</li>
+               <li>Hard disk: Seagate Barracuda 1TB 7200 RPM</li>
+             </ul>
+          </div>
+          <div id="specsright">
+             <img src="assets/Img/bubblecluster.png" alt="decorative bubbles with computer pictures"/>
+             <h2>Gear</h2>
+             <ul>
+               <li>Mouse: Steelseries Rival 310</li>
+               <li>Keyboard: Steelseries Apex</li>
+               <li>Monitor: Asus VP228He 21" 60hz</li>
+               <li>Headphones: Steelseries 350 siberia</li>
+             </ul>
+          </div>
+        </div>
         <div id="bottomcontainer">
             <div class="school">
                 <div class="school-img">
@@ -87,6 +109,8 @@
         </div>
 
         <div id="videocontainer">
+          <img src="assets/Img/videoleftcircle.png" alt="decoration" id="videoleftcircle"/>
+          <img src="assets/Img/videorightcircle.png" alt="decoration" id="videorightcircle"/>
           <div class="video-box">
             <iframe class="video" src="https://www.youtube.com/embed/g2I5fjCzXCY" allowfullscreen></iframe>
           </div>
@@ -94,7 +118,7 @@
 
         <div id="mailcontainer">
           <div class="mail-box">
-            <img class="mail-box-background "src="assets/Img/newsletter-background.png" alt="background">
+
             <h1 class="newsletter-header">Newsletter</h1>
             <div>
              <input class="email-input" placeholder="Input your e-mail...">
@@ -118,10 +142,10 @@
                 <p></p>
             </div>
             <div id="social-media-line">
+              <!--  <img>
                 <img>
                 <img>
-                <img>
-                <img>
+                <img> -->
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
