--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="SportsPark Blaavandshuks E-Sport facility is a place where you can play games">
+        <meta name="description" content="SportsPark Blaavandshuks E-Sport facility is a place where you can play games, train and bond together with your friends. The center is equipped with brand new gear as the facility was built in the middle of 2017.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/css/master.css" rel="stylesheet" type="text/css"/>
-        <title>E-Sport Center</title>
+        <title>E-Sport Center Home</title>
         <link rel="icon" type="image/png" sizes="16x16" href="assets/Img/favicon.ico">
     </head>
     <body>
