--- a/bootcamp.html
+++ b/bootcamp.html
@@ -99,7 +99,6 @@
               </div>
             </div>
             <div id="budget">
-                <!-- <img class="budget-background "src="assets/Img/budget-background.png" alt="background"> -->
                 <div id="budget-prices">
                   <br><h2>Budget</h2><br><p>With the budget price for</p> <p style="color:#FFAA00;">6 or less players</p><p> you get all above mentioned perks, but will have to share the E-Sport room with other eventual players.</p><br>
                 </div>
@@ -134,10 +133,12 @@
                 </div>
                 <div id="pricebox-deals">
                   <ul id="dealicons">
-                    <li id="pad"><img src="assets/Img/gamepad.png"/></li>
-                    <li id="people"><img src="assets/Img/people.png"/></li>
-                    <li id="crown"><img src="assets/Img/crown.png"/></li>
-                    <li id="lastli"><img src="assets/Img/friend.png"/></li>
+                    <li id="pad"><img src="assets/Img/gamepad.png" alt="pad"/></li>
+                    <li id="people"><img src="assets/Img/people.png" alt="people"/></li>
+                    <li id="crown"><img src="assets/Img/crown.png"
+                      alt="crown"/></li>
+                    <li id="lastli"><img src="assets/Img/friend.png"
+                      alt="friend"/></li>
                   </ul>
                   <div onmouseover="slideout(this)" onmouseout="slidein(this)" class="pricetile blueprice">
                       <h2>6 or less People</h2>
@@ -188,9 +189,9 @@
 
             <footer>
             <div id="sponsor-line">
-                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png">
-                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png">
-                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg">
+                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png" alt="sponsor">
+                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png" alt="sponsor">
+                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg" alt="sponsor">
             </div>
             <div id="info-line">
                 <p></p>
