last SEO on bootcamp
>added src and alt codes to social media buttons

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <p></p>
             </div>
             <div id="social-media-line">
-              <!--  <img>
-                <img>
-                <img>
-                <img> -->
+                <img src="" alt="Facebook">
+                <img src="" alt="YouTube">
+                <img src="" alt="Instagram">
+                <img src="" alt="Snapchat">
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
