--- a/bootcamp.html
+++ b/bootcamp.html
@@ -202,10 +202,10 @@
                 <p></p>
             </div>
             <div id="social-media-line">
-                <img>
-                <img>
-                <img>
-                <img>
+                <img src="" alt="Facebook">
+                <img src="" alt="YouTube">
+                <img src="" alt="Instagram">
+                <img src="" alt="Snapchat">
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
