last SEO i think
>added all missing img alt codes

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <div class="school">
               <img id="schoolcircle" src="assets/Img/schoolcircle.png" alt="computer picture"/>
                 <div class="school-img">
-                    <img src="assets/Img/school/kitchen.png"><img src="assets/Img/school/E-Sport.png">
+                    <img src="assets/Img/school/kitchen.png" alt="E-Sport room"><img src="assets/Img/school/E-Sport.png" alt="E-Sport room">
                 </div>
                 <div class="school-img">
-                    <img src="assets/Img/school/kitchen.png"><img src="assets/Img/school/E-Sport.png">
+                    <img src="assets/Img/school/kitchen.png" alt="E-Sport room"><img src="assets/Img/school/E-Sport.png" alt="E-Sport room">
                 </div>
             </div>
             <div class="school"><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
@@ -133,9 +133,9 @@
 
         <footer>
             <div id="sponsor-line">
-                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png">
-                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png">
-                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg">
+                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png" alt="sponsor">
+                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png" alt="sponsor">
+                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg" alt="sponsor">
             </div>
             <div id="info-line">
                 <p></p>
