--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <div id="middlecontainer">
 
           <div class="thirtythree"><p>With physical training it is possible to improve your neural pathways and their connections. This will improve your reflexes and reaction time in games.</p>
-            <img src="assets/img/siloutte1.png" alt="siloutte"/></div>
+            <img src="assets/img/siloutte1.png" alt="silhouette"/></div>
           <div class="thirtythree"><p>Physical activity and weight lift can prevent pain in neck and shoulders caused by gaming and pc work in general.</p>
-            <img src="assets/img/siloutte2.png" alt="siloutte"/></div>
+            <img src="assets/img/siloutte2.png" alt="silhouette"/></div>
           <div class="thirtythree"><p>Regular exercise will improve your memory and help your thinking skills. This will make you a more efficient learner and bring you one step ahead of your competitors.</p>
-            <img src="assets/img/siloutte3.png" alt="siloutte"/></div>
+            <img src="assets/img/siloutte3.png" alt="silhouette"/></div>
         </div>
         <div id="specs">
           <div id="specsleft">
