--- a/bootcamp.html
+++ b/bootcamp.html
@@ -21,7 +21,7 @@
                            <a href="#">Water Park</a>
                            <a href="#">Fitness center</a>
                            <a href="#">Sports Hall</a>
-                           <a href="#">E-Sport</a>
+                           <a href="index.html">E-Sport</a>
                         </div>
                     </li>
 
@@ -202,10 +202,10 @@
                 <p></p>
             </div>
             <div id="social-media-line">
-                <img src="" alt="Facebook">
-                <img src="" alt="YouTube">
-                <img src="" alt="Instagram">
-                <img src="" alt="Snapchat">
+              <img class="media-icon" src="assets/Img/facebook-icon.ico" alt="Facebook">
+              <img class="media-icon" src="assets/Img/youtube-icon.png" alt="YouTube">
+              <img class="media-icon" src="assets/Img/instagram-icon.png" alt="Instagram">
+              <img class="media-icon" src="assets/Img/snapchat-icon.png" alt="Snapchat">
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
