--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="assets/Img/school/kitchen.png" alt="E-Sport room"><img src="assets/Img/school/E-Sport.png" alt="E-Sport room">
                 </div>
                 <div class="school-img">
-                    <img src="assets/Img/school/kitchen.png" alt="E-Sport room"><img src="assets/Img/school/E-Sport.png" alt="E-Sport room">
+                    <img src="assets/Img/school/football.jpg" alt="football field"><img src="assets/Img/school/swimming-hall.jpg" alt="swimming hall">
                 </div>
             </div>
             <div class="school"><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
@@ -146,10 +146,10 @@
                 <p></p>
             </div>
             <div id="social-media-line">
-                <img src="" alt="Facebook">
-                <img src="" alt="YouTube">
-                <img src="" alt="Instagram">
-                <img src="" alt="Snapchat">
+                <img class="media-icon" src="assets/Img/facebook-icon.ico" alt="Facebook">
+                <img class="media-icon" src="assets/Img/youtube-icon.png" alt="YouTube">
+                <img class="media-icon" src="assets/Img/instagram-icon.png" alt="Instagram">
+                <img class="media-icon" src="assets/Img/snapchat-icon.png" alt="Snapchat">
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
