slider images and minor css changes

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
         </header>
         <div id="slider">
           <ul id="slides">
-              <li class="sliderli">1</li>
-              <li class="sliderli">2</li>
-              <li class="sliderli">3</li>
-              <li class="sliderli">4</li>
-              <li class="sliderli">5</li>
-          </ul>
-          <ul id="slide-dots">
+            <li class="sliderli"><img src="assets/Img/slide1.jpg" alt="slider image" class="sliderimage"/></li>
+            <li class="sliderli"><img src="assets/Img/slide2.jpg" alt="slider image" class="sliderimage"/></li>
+            <li class="sliderli"><img src="assets/Img/slide3.jpg" alt="slider image" class="sliderimage"/></li>
+        </ul>
+        <ul id="slide-dots">
 
           </ul>
         </div>
