--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img src="assets/Img/school/football.jpg" alt="football field"><img src="assets/Img/school/swimming-hall.jpg" alt="swimming hall">
                 </div>
             </div>
-            <div class="school"><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
+            <div class="school"><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="http://www.sportspark.dk/kontakt1">Contact Page</a></div>
         </div>
 
         <div id="videocontainer">
