404 and css changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href="http://www.riptides.dk/"><button id="riptidesbutton">Go to Riptides</button></a>
             </div>
         </div>
-        <h1 id="midh1">How does fysical training improve your gaming skills?</h1>
+        <h1 id="midh1">How does physical training improve your gaming skills?</h1>
         <div id="middlecontainer">
 
           <div class="thirtythree"><p>With physical training it is possible to improve your neural pathways and their connections. This will improve your reflexes and reaction time in games.</p>
